--- a/index.html
+++ b/index.html
@@ -126,21 +126,20 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 </section>
 
 <!-- Skills -->
+<!-- Skills -->
 <section id="skills">
 <h2>Skills</h2>
 <div class="grid">
-  <div class="card"><i class="fab fa-python"></i><h4>Python</h4><p>ML frameworks & data analysis</p></div>
-  <div class="card"><i class="fab fa-java"></i><h4>Java</h4><p>OOP & enterprise programming</p></div>
-  <div class="card"><i class="fas fa-c"></i><h4>C</h4><p>Algorithms & DSA foundations</p></div>
-  <div class="card"><i class="fas fa-robot"></i><h4>Machine Learning</h4><p>Predictions & classification</p></div>
-  <div class="card"><i class="fas fa-chart-line"></i><h4>Data Analytics</h4><p>Extract insights from data</p></div>
-  <div class="card"><i class="fas fa-brain"></i><h4>AI</h4><p>Neural networks & AI concepts</p></div>
-  <div class="card"><i class="fas fa-database"></i><h4>EDA</h4><p>Data exploration & visualization</p></div>
-  <div class="card"><i class="fas fa-project-diagram"></i><h4>Pandas/NumPy/Sklearn</h4><p>Data manipulation & modeling</p></div>
-  <div class="card"><i class="fab fa-git-alt"></i><h4>Git/GitHub</h4><p>Version control & collaboration</p></div>
-  <div class="card"><i class="fas fa-network-wired"></i><h4>DSA</h4><p>Strong algorithm knowledge</p></div>
-  <div class="card"><i class="fas fa-server"></i><h4>Networking</h4><p>Computer networks & protocols</p></div>
-  <div class="card"><i class="fas fa-layer-group"></i><h4>Deep Learning</h4><p>Neural networks implementation</p></div>
+  <div class="card skill-card"><div class="icon-bg python"><i class="fab fa-python"></i></div><h4>Python</h4><p>ML frameworks & data analysis</p></div>
+  <div class="card skill-card"><div class="icon-bg java"><i class="fab fa-java"></i></div><h4>Java</h4><p>OOP & enterprise programming</p></div>
+  <div class="card skill-card"><div class="icon-bg c"><i class="fas fa-c"></i></div><h4>C</h4><p>Algorithms & DSA foundations</p></div>
+  <div class="card skill-card"><div class="icon-bg ml"><i class="fas fa-robot"></i></div><h4>Machine Learning</h4><p>Predictions & classification</p></div>
+  <div class="card skill-card"><div class="icon-bg da"><i class="fas fa-chart-line"></i></div><h4>Data Analytics</h4><p>Extract insights from data</p></div>
+  <div class="card skill-card"><div class="icon-bg ai"><i class="fas fa-brain"></i></div><h4>AI</h4><p>Neural networks & AI concepts</p></div>
+  <div class="card skill-card"><div class="icon-bg eda"><i class="fas fa-database"></i></div><h4>EDA</h4><p>Data exploration & visualization</p></div>
+  <div class="card skill-card"><div class="icon-bg ds"><i class="fas fa-network-wired"></i></div><h4>DSA</h4><p>Strong algorithm knowledge</p></div>
+  <div class="card skill-card"><div class="icon-bg git"><i class="fab fa-git-alt"></i></div><h4>Git/GitHub</h4><p>Version control & collaboration</p></div>
+  <div class="card skill-card"><div class="icon-bg dl"><i class="fas fa-layer-group"></i></div><h4>Deep Learning</h4><p>Neural networks implementation</p></div>
 </div>
 </section>
 
