--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hammid Bin Aejaz | Portfolio</title>
+<meta name="description" content="Portfolio of Hammid Bin Aejaz – AI & ML enthusiast, Python, ML projects, and study resources.">
 
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -12,13 +13,13 @@
 :root {
   --bg-light:#fdfdfd; --bg-dark:#0f172a;
   --text-light:#1e293b; --text-dark:#f1f5f9;
-  --accent:#3b82f6;
-  --card-radius:15px;
+  --accent:#3b82f6; --card-radius:15px;
 }
 * { box-sizing:border-box; margin:0; padding:0; }
 body { font-family:'Inter',sans-serif; background:var(--bg-light); color:var(--text-light); line-height:1.6; scroll-behavior:smooth; transition:0.4s; }
 body.dark { background:var(--bg-dark); color:var(--text-dark); }
 
+/* ===== NAVIGATION ===== */
 nav {
   position:fixed; top:0; width:100%; display:flex; justify-content:center; gap:25px;
   padding:15px 0; background:rgba(255,255,255,0.85); backdrop-filter:blur(10px);
@@ -37,37 +38,55 @@ nav a:hover { color:var(--accent); }
 }
 .toggle-btn:hover { transform: scale(1.1) rotate(10deg); }
 
+/* ===== CONTAINER ===== */
 .container { width:90%; max-width:1100px; margin:auto; padding-top:100px; }
 section { margin-bottom:80px; opacity:0; transform:translateY(30px); transition: all 0.8s ease-out; }
 section.visible { opacity:1; transform:translateY(0); }
-
 h2 { text-align:center; color:var(--accent); font-size:2rem; margin-bottom:40px; font-weight:600; }
-.hero { text-align:center; padding:80px 20px; }
-.profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid var(--accent); object-fit:cover; margin-bottom:20px; box-shadow:0 6px 20px rgba(0,0,0,0.12); transition: transform 0.4s, box-shadow 0.4s; }
+
+/* ===== HERO / ABOUT ===== */
+.hero-container { text-align:center; padding:60px 20px; max-width:700px; margin:auto; }
+.hero h1 { font-size:2.5rem; margin-bottom:8px; font-weight:700; letter-spacing:1px; }
+.hero p.intro { font-size:1.1rem; max-width:650px; margin:10px auto; line-height:1.5; }
+.hero .tagline { font-size:1rem; margin-bottom:20px; color:#64748b; font-weight:500; }
+.profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid var(--accent); object-fit:cover; margin-bottom:15px; box-shadow:0 6px 20px rgba(0,0,0,0.12); transition: transform 0.4s, box-shadow 0.4s; }
 .profile-photo:hover { transform:scale(1.08) rotate(1deg); box-shadow:0 12px 30px rgba(0,0,0,0.2); }
 
-.hero h1 { font-size:2.5rem; margin-bottom:10px; font-weight:700; letter-spacing:1px; }
-.hero p.intro { font-size:1.1rem; max-width:650px; margin:auto; margin-bottom:20px; }
-.btn { display:inline-block; padding:10px 20px; background:var(--accent); color:#fff; border-radius:8px; font-weight:600; transition:0.3s; margin-top:10px; text-decoration:none; }
+.social-links a { margin:0 12px; font-size:1.4rem; color:var(--text-light); transition:0.3s; }
+body.dark .social-links a { color:var(--text-dark); }
+.social-links a:hover { color:var(--accent); transform:scale(1.2); }
+
+.btn { display:inline-block; padding:12px 22px; background:var(--accent); color:#fff; border-radius:8px; font-weight:600; transition:0.3s; text-decoration:none; margin-top:10px; }
 .btn:hover { background:#2563eb; transform:translateY(-2px); }
 
+/* ===== GRID CARDS ===== */
 .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
 .card { background:#fff; padding:25px; border-radius:var(--card-radius); text-align:center; box-shadow:0 6px 15px rgba(0,0,0,0.08); transition: transform 0.4s, box-shadow 0.4s; position:relative; cursor:pointer; }
 body.dark .card { background:#1e293b; }
 .card:hover { transform:translateY(-5px) scale(1.03); box-shadow:0 10px 25px rgba(0,0,0,0.15); }
-.card i { font-size:2rem; margin-bottom:10px; color:var(--accent); }
 
-.skill-tooltip { display:none; } /* Remove hover tooltip on mobile for simplicity */
+/* Skill Card */
+.skill-card .icon-bg {
+  width:70px; height:70px; border-radius:50%; display:flex; align-items:center; justify-content:center; margin:0 auto 12px;
+  font-size:2rem; color:#fff; transition: transform 0.3s, box-shadow 0.3s;
+}
+.skill-card:hover .icon-bg { transform:scale(1.2); box-shadow:0 6px 15px rgba(0,0,0,0.2); }
+
+/* Skill colors */
+.icon-bg.python { background:#306998; }
+.icon-bg.java { background:#f89820; }
+.icon-bg.c { background:#00599c; }
+.icon-bg.ml { background:#f59e0b; }
+.icon-bg.da { background:#10b981; }
+.icon-bg.ai { background:#8b5cf6; }
+.icon-bg.eda { background:#6366f1; }
+.icon-bg.ds { background:#ef4444; }
+.icon-bg.git { background:#f05032; }
+.icon-bg.dl { background:#06b6d4; }
 
 /* Books & Hobbies */
 .book-row, .grid.hobbies { display:flex; justify-content:center; flex-wrap:wrap; gap:15px; overflow-x:auto; padding-bottom:10px; }
-.book-card, .card.hobby-card {
-  flex:0 0 auto; background:#fff; padding:12px 15px; border-radius:10px; 
-  box-shadow:0 4px 12px rgba(0,0,0,0.08); text-align:center; 
-  min-width:140px; opacity:0; transform:translateY(20px);
-  transition:all 0.5s ease, transform 0.3s ease;
-  cursor:default;
-}
+.book-card, .card.hobby-card { flex:0 0 auto; background:#fff; padding:12px 15px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.08); text-align:center; min-width:140px; opacity:0; transform:translateY(20px); transition:all 0.5s ease, transform 0.3s ease; cursor:default; }
 body.dark .book-card, body.dark .card.hobby-card { background:#1e293b; color:#f1f5f9; box-shadow:0 4px 12px rgba(0,0,0,0.3); }
 .book-card.visible, .card.hobby-card.visible { opacity:1; transform:translateY(0); }
 .book-card:hover, .card.hobby-card:hover { transform:translateY(-5px) scale(1.05) rotateZ(1deg); box-shadow:0 8px 20px rgba(0,0,0,0.15); }
@@ -75,40 +94,32 @@ body.dark .book-card, body.dark .card.hobby-card { background:#1e293b; color:#f1
 .book-card p, .card.hobby-card p { font-size:0.85rem; color:#64748b; }
 body.dark .book-card p, body.dark .card.hobby-card p { color:#cbd5e1; }
 
+/* Contact Form */
+.contact-container { max-width:600px; margin:auto; text-align:left; }
+.contact-container input, .contact-container textarea { width:100%; padding:10px; margin:8px 0; border-radius:6px; border:1px solid #ccc; font-size:1rem; }
+.contact-container button { width:100%; margin-top:10px; }
+
+/* Footer */
 footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 
-/* ====================== MOBILE IMPROVEMENTS ====================== */
-@media(max-width:800px) {
-  .grid { grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; }
-  .hero h1 { font-size:2rem; }
-  .hero p.intro { font-size:1rem; padding:0 10px; }
-  .profile-photo { width:120px; height:120px; }
-  .card { padding:15px; }
-  .btn { padding:8px 14px; font-size:0.9rem; }
-  .grid.hobbies, .book-row { justify-content:flex-start; overflow-x:auto; }
-}
-
-/* Small Mobile (<=500px) */
-@media(max-width:500px) {
-  nav { flex-direction:column; gap:10px; }
-  .grid { grid-template-columns:1fr; }
-  .card i { font-size:1.5rem; margin-bottom:6px; }
-  .hero h1 { font-size:1.5rem; }
-  .hero p.intro { font-size:0.9rem; }
-}
+/* MOBILE */
+@media(max-width:800px){ .grid { grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; } .hero h1 { font-size:2rem; } .hero p.intro { font-size:1rem; padding:0 10px; } .profile-photo { width:120px; height:120px; } .card { padding:15px; } .btn { padding:8px 14px; font-size:0.9rem; } .grid.hobbies, .book-row { justify-content:flex-start; overflow-x:auto; } }
+@media(max-width:500px){ nav { flex-direction:column; gap:10px; } .grid { grid-template-columns:1fr; } .card i { font-size:1.5rem; margin-bottom:6px; } .hero h1 { font-size:1.5rem; } .hero p.intro { font-size:0.9rem; } }
 </style>
 </head>
 <body>
 
+<!-- Theme Toggle -->
 <div class="toggle-btn" id="themeToggle"><i class="fas fa-moon"></i></div>
 
+<!-- Navigation -->
 <nav>
   <a href="#about">About</a>
   <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
   <a href="#certificates">Certificates</a>
   <a href="#hobbies">Hobbies</a>
-  <a href="#books">Me Core</a>
+  <a href="#books">Learning</a>
   <a href="#contact">Contact</a>
 </nav>
 
@@ -116,18 +127,19 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 
 <!-- About -->
 <section id="about" class="hero">
-  <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
-  <h1>Hammid Bin Aejaz</h1>
-  <p class="intro">Hi! I’m Hammid, an AI & ML <span style="color:var(--accent)">enthusiast</span>. I enjoy turning data into insights and building smart systems.</p>
-  <p>
-    <a href="mailto:hammidbinaejaz@gmail.com">Email</a> | 
-    <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | 
-    <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">LinkedIn</a>
-  </p>
-  <a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
+  <div class="hero-container">
+    <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
+    <h1>Hammid Bin Aejaz</h1>
+    <p class="intro">Hi! I’m Hammid, an AI & ML <span style="color:var(--accent)">enthusiast</span>. I enjoy turning data into insights and building smart systems.</p>
+    <div class="social-links">
+      <a href="mailto:hammidbinaejaz@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="https://github.com/hammidbinaejaz" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    </div>
+    <a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
+  </div>
 </section>
 
-<!-- Skills -->
 <!-- Skills -->
 <section id="skills">
 <h2>Skills</h2>
@@ -149,11 +161,40 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 <section id="projects">
 <h2>Projects</h2>
 <div class="grid">
-  <div class="card"><h3>Embedded AI for Websites</h3><p>Lightweight AI models for real-time website interaction.</p></div>
-  <div class="card"><h3>Movie Recommendation System</h3><p>Collaborative filtering & content-based engine.</p><a class="btn" href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub</a></div>
-  <div class="card"><h3>IPL Win Predictor</h3><p>Predictive model on IPL datasets with ~85% accuracy.</p><a class="btn" href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub</a></div>
-  <div class="card"><h3>4th Sem SVIT Notes</h3><p>Collection of study notes and resources for 4th semester.</p><a class="btn" href="https://hammidbinaejaz.github.io/4TH-SEM-SVIT-NOTES/" target="_blank">View</a></div>
-  <div class="card"><h3>3rd Sem SVIT Notes</h3><p>Collection of study notes and resources for 3rd semester.</p><a class="btn" href="https://hammidbinaejaz.github.io/3RD-SEM-SVIT-NOTES/" target="_blank">View</a></div>
+  <div class="card project-card">
+    <h3>Embedded AI for Websites</h3>
+    <p><strong>Objective:</strong> Lightweight AI models for real-time website interaction.</p>
+    <p><strong>Tech:</strong> JavaScript, Python</p>
+    <p><strong>Result:</strong> Improved website interactivity and user engagement.</p>
+  </div>
+  <div class="card project-card">
+    <h3>Movie Recommendation System</h3>
+    <p><strong>Objective:</strong> Recommend movies using collaborative filtering and content-based methods.</p>
+    <p><strong>Tech:</strong> Python, Pandas, Scikit-learn</p>
+    <p><strong>Result:</strong> Personalized recommendations with 90% user satisfaction.</p>
+    <a class="btn" href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub</a>
+  </div>
+  <div class="card project-card">
+    <h3>IPL Win Predictor</h3>
+    <p><strong>Objective:</strong> Predict IPL match winners using historical data.</p>
+    <p><strong>Tech:</strong> Python, Pandas, Scikit-learn</p>
+    <p><strong>Result:</strong> ~85% prediction accuracy.</p>
+    <a class="btn" href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub</a>
+  </div>
+  <div class="card project-card">
+    <h3>4th Sem SVIT Notes</h3>
+    <p><strong>Objective:</strong> Study notes and resources for 4th semester.</p>
+    <p><strong>Tech:</strong> HTML, CSS, JS</p>
+    <p><strong>Result:</strong> Easy access for students to all notes.</p>
+    <a class="btn" href="https://hammidbinaejaz.github.io/4TH-SEM-SVIT-NOTES/" target="_blank">View</a>
+  </div>
+  <div class="card project-card">
+    <h3>3rd Sem SVIT Notes</h3>
+    <p><strong>Objective:</strong> Study notes and resources for 3rd semester.</p>
+    <p><strong>Tech:</strong> HTML, CSS, JS</p>
+    <p><strong>Result:</strong> Students can quickly access all notes.</p>
+    <a class="btn" href="https://hammidbinaejaz.github.io/3RD-SEM-SVIT-NOTES/" target="_blank">View</a>
+  </div>
 </div>
 </section>
 
@@ -161,7 +202,10 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 <section id="certificates">
 <h2>Certificates</h2>
 <div class="grid">
-  <div class="card"><h3>AI Fundamentals – IBM</h3><a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download</a></div>
+  <div class="card">
+    <h3>AI Fundamentals – IBM</h3>
+    <a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download</a>
+  </div>
   <div class="card"><h3>Data Structures – Infosys</h3></div>
   <div class="card"><h3>Advanced DSA – Infosys</h3></div>
   <div class="card"><h3>Artificial Intelligence – Infosys</h3></div>
@@ -181,48 +225,89 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 </section>
 
 <!-- Books -->
+<!-- Books Section -->
+<!-- Books Section -->
 <section id="books">
-<h2>Learning & Growth</h2>
-<div class="book-row">
-  <div class="book-card"><h4>Atomic Habits</h4><p>James Clear</p></div>
-  <div class="book-card"><h4>Do Your Work</h4><p>Steven Pressfield</p></div>
-  <div class="book-card"><h4>Why We Sleep</h4><p>Matthew Walker</p></div>
-  <div class="book-card"><h4>The Subtle Art of Not Giving a F*ck</h4><p>Mark Manson</p></div>
-  <div class="book-card"><h4>The Brain: The Story of You</h4><p>David Eagleman</p></div>
-  <div class="book-card"><h4>Pir-e-Kamil</h4><p>Umera Ahmed</p></div>
-  <div class="book-card"><h4>The Happiness Advantage</h4><p>Shawn Achor</p></div>
-  <div class="book-card"><h4>The Courage to Be Disliked</h4><p>Ichiro Kishimi & Fumitake Koga</p></div>
-</div>
+  <h2>Learning & Growth</h2>
+  <div class="book-row">
+    <div class="book-card">
+      <div class="book-title">Atomic Habits</div>
+      <div class="book-author">James Clear</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">Do Your Work</div>
+      <div class="book-author">Steven Pressfield</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">Why We Sleep</div>
+      <div class="book-author">Matthew Walker</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">The Subtle Art of Not Giving a F*ck</div>
+      <div class="book-author">Mark Manson</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">The Brain: The Story of You</div>
+      <div class="book-author">David Eagleman</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">Pir-e-Kamil</div>
+      <div class="book-author">Umera Ahmed</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">The Happiness Advantage</div>
+      <div class="book-author">Shawn Achor</div>
+    </div>
+    <div class="book-card">
+      <div class="book-title">Grit</div>
+      <div class="book-author">Angela Duckworth</div>
+    </div>
+  </div>
 </section>
+
 
 <!-- Contact -->
+<!-- Contact -->
 <section id="contact">
-<h2>Contact</h2>
-<div class="grid">
-  <div class="card">
-    <p>Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
-    <p>Phone: +91 9622016339</p>
-    <p>Location: Bangalore, India</p>
-    <a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
+  <h2>Contact Me</h2>
+  <div class="grid" style="justify-content:center; gap:20px;">
+    <div class="card" style="padding:20px;">
+      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
+      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/hammidbinaejaz" target="_blank">github.com/hammidbinaejaz</a></p>
+      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">linkedin.com/in/hamid-bin-aejaz</a></p>
+    </div>
   </div>
-</div>
 </section>
-
-</div>
-
-<p style="text-align:center; font-style:italic; margin-bottom:10px; color:#64748b;">
-"The future belongs to those who understand that artificial intelligence is not about replacing humans, but augmenting human capabilities."
-</p>
-<footer>© 2025 Hammid Bin Aejaz</footer>
+<!-- Footer -->
+<footer style="text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8;">
+  <p style="margin-bottom:8px; font-style:italic;">
+    "The future belongs to those who understand that artificial intelligence is not about replacing humans, but augmenting human capabilities."
+  </p>
+  <p>Designed by Hammid Bin Aejaz</p>
+</footer>
+</div> <!-- container end -->
 
 <script>
-// Dark mode toggle
-document.getElementById('themeToggle').addEventListener('click', ()=>document.body.classList.toggle('dark'));
+// ===== Theme Toggle =====
+const themeToggle = document.getElementById('themeToggle');
+themeToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark');
+  const icon = themeToggle.querySelector('i');
+  icon.classList.toggle('fa-moon');
+  icon.classList.toggle('fa-sun');
+});
 
-// Scroll fade-in
-const sections = document.querySelectorAll('section, .book-card, .hobby-card');
-const observer = new IntersectionObserver(entries=>{entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add('visible');});},{threshold:0.1});
-sections.forEach(sec=>observer.observe(sec));
+// ===== Scroll Animation =====
+const sections = document.querySelectorAll('section, .book-card, .card.hobby-card');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting){
+      entry.target.classList.add('visible');
+    }
+  });
+}, { threshold:0.15 });
+
+sections.forEach(section => observer.observe(section));
 </script>
 
 </body>
