--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
     <h1>Hammid Bin Aejaz</h1>
     <p class="intro">Hi! I’m Hammid, an AI & ML <span style="color:var(--accent)">enthusiast</span>. I enjoy turning data into insights and building smart systems.</p>
     <div class="social-links">
-      <a href="mailto:hammidbinaejaz@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="mailto:hamidbinaejaz@gmail.com"><i class="fas fa-envelope"></i></a>
       <a href="https://github.com/hammidbinaejaz" target="_blank"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
@@ -272,7 +272,7 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
   <h2>Contact Me</h2>
   <div class="grid" style="justify-content:center; gap:20px;">
     <div class="card" style="padding:20px;">
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
+      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:hamidbinaejaz@gmail.com">hamidbinaejaz@gmail.com</a></p>
       <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/hammidbinaejaz" target="_blank">github.com/hammidbinaejaz</a></p>
       <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">linkedin.com/in/hamid-bin-aejaz</a></p>
     </div>
