--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@ if (currentTheme === 'dark') {
   document.body.classList.add('dark');
   themeToggle.innerHTML = '<i class="fas fa-sun"></i>';
 }
+
 themeToggle.addEventListener('click', () => {
   document.body.classList.toggle('dark');
   if (document.body.classList.contains('dark')) {
@@ -310,9 +311,7 @@ themeToggle.addEventListener('click', () => {
 // ================= Scroll Fade-In Animations =================
 const fadeElements = document.querySelectorAll('section, .book-card, .hobby-card, .card');
 const observer = new IntersectionObserver((entries) => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) entry.target.classList.add('visible');
-  });
+  entries.forEach(entry => { if (entry.isIntersecting) entry.target.classList.add('visible'); });
 }, { threshold: 0.1 });
 fadeElements.forEach(el => observer.observe(el));
 
@@ -324,8 +323,9 @@ navLinks.forEach(link => {
     const targetID = link.getAttribute('href').slice(1);
     const targetSection = document.getElementById(targetID);
     if (targetSection) {
+      const navHeight = document.querySelector('nav').offsetHeight;
       window.scrollTo({
-        top: targetSection.offsetTop - 60,
+        top: targetSection.offsetTop - navHeight - 10,
         behavior: 'smooth'
       });
     }
@@ -337,7 +337,7 @@ const sections = document.querySelectorAll('section');
 window.addEventListener('scroll', () => {
   let current = '';
   sections.forEach(section => {
-    const sectionTop = section.offsetTop - 80;
+    const sectionTop = section.offsetTop - document.querySelector('nav').offsetHeight - 10;
     if (scrollY >= sectionTop) current = section.getAttribute('id');
   });
   navLinks.forEach(link => {
@@ -350,7 +350,6 @@ window.addEventListener('scroll', () => {
 const introText = "Hi! I’m Hammid, an AI & ML enthusiast.";
 const introElement = document.querySelector('.hero p.intro');
 let charIndex = 0;
-
 function typeEffect() {
   if (charIndex < introText.length) {
     introElement.textContent += introText.charAt(charIndex);
@@ -361,38 +360,17 @@ function typeEffect() {
 introElement.textContent = '';
 typeEffect();
 
-// ================= Animated Skill Bars =================
-const skillCards = document.querySelectorAll('.skill-card');
-const skillObserver = new IntersectionObserver((entries) => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
-      const skillBar = entry.target.querySelector('.skill-bar');
-      if (skillBar) skillBar.style.width = skillBar.dataset.progress;
-    }
-  });
-}, { threshold: 0.5 });
-skillCards.forEach(card => skillObserver.observe(card));
-
 // ================= Back-to-Top Button =================
 const backBtn = document.createElement('div');
 backBtn.id = 'backTop';
 backBtn.innerHTML = '<i class="fas fa-arrow-up"></i>';
 document.body.appendChild(backBtn);
 
-backBtn.style.cssText = `
-  position: fixed; bottom: 30px; right: 30px; background: var(--accent);
-  color: #fff; padding: 10px 12px; border-radius: 50%; cursor: pointer;
-  font-size: 1.2rem; display: none; z-index: 1000; transition: 0.3s;
-`;
-backBtn.addEventListener('click', () => {
-  window.scrollTo({ top: 0, behavior: 'smooth' });
-});
-
+backBtn.addEventListener('click', () => { window.scrollTo({ top: 0, behavior: 'smooth' }); });
 window.addEventListener('scroll', () => {
   if (window.scrollY > 300) backBtn.style.display = 'flex';
   else backBtn.style.display = 'none';
 });
-
 </script>
   
 </body>
