--- a/index.html
+++ b/index.html
@@ -140,21 +140,101 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
   </div>
 </section>
 
-<!-- Skills -->
 <section id="skills">
-<h2>Skills</h2>
-<div class="grid">
-  <div class="card skill-card"><div class="icon-bg python"><i class="fab fa-python"></i></div><h4>Python</h4><p>ML frameworks & data analysis</p></div>
-  <div class="card skill-card"><div class="icon-bg java"><i class="fab fa-java"></i></div><h4>Java</h4><p>OOP & enterprise programming</p></div>
-  <div class="card skill-card"><div class="icon-bg c"><i class="fas fa-c"></i></div><h4>C</h4><p>Algorithms & DSA foundations</p></div>
-  <div class="card skill-card"><div class="icon-bg ml"><i class="fas fa-robot"></i></div><h4>Machine Learning</h4><p>Predictions & classification</p></div>
-  <div class="card skill-card"><div class="icon-bg da"><i class="fas fa-chart-line"></i></div><h4>Data Analytics</h4><p>Extract insights from data</p></div>
-  <div class="card skill-card"><div class="icon-bg ai"><i class="fas fa-brain"></i></div><h4>AI</h4><p>Neural networks & AI concepts</p></div>
-  <div class="card skill-card"><div class="icon-bg eda"><i class="fas fa-database"></i></div><h4>EDA</h4><p>Data exploration & visualization</p></div>
-  <div class="card skill-card"><div class="icon-bg ds"><i class="fas fa-network-wired"></i></div><h4>DSA</h4><p>Strong algorithm knowledge</p></div>
-  <div class="card skill-card"><div class="icon-bg git"><i class="fab fa-git-alt"></i></div><h4>Git/GitHub</h4><p>Version control & collaboration</p></div>
-  <div class="card skill-card"><div class="icon-bg dl"><i class="fas fa-layer-group"></i></div><h4>Deep Learning</h4><p>Neural networks implementation</p></div>
-</div>
+  <h2>My Skills</h2>
+  <div class="grid">
+    
+    <!-- Python -->
+    <div class="skill-card">
+      <div class="icon-bg python"><i class="fab fa-python"></i></div>
+      <div class="skill-name">Python</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="90%"></div>
+      </div>
+    </div>
+
+    <!-- Java -->
+    <div class="skill-card">
+      <div class="icon-bg java"><i class="fab fa-java"></i></div>
+      <div class="skill-name">Java</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="80%"></div>
+      </div>
+    </div>
+
+    <!-- C -->
+    <div class="skill-card">
+      <div class="icon-bg c"><i class="fas fa-code"></i></div>
+      <div class="skill-name">C</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="85%"></div>
+      </div>
+    </div>
+
+    <!-- Machine Learning -->
+    <div class="skill-card">
+      <div class="icon-bg ml"><i class="fas fa-robot"></i></div>
+      <div class="skill-name">Machine Learning</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="75%"></div>
+      </div>
+    </div>
+
+    <!-- Data Analysis -->
+    <div class="skill-card">
+      <div class="icon-bg da"><i class="fas fa-chart-line"></i></div>
+      <div class="skill-name">Data Analysis</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="80%"></div>
+      </div>
+    </div>
+
+    <!-- Artificial Intelligence -->
+    <div class="skill-card">
+      <div class="icon-bg ai"><i class="fas fa-brain"></i></div>
+      <div class="skill-name">Artificial Intelligence</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="70%"></div>
+      </div>
+    </div>
+
+    <!-- Exploratory Data Analysis -->
+    <div class="skill-card">
+      <div class="icon-bg eda"><i class="fas fa-search"></i></div>
+      <div class="skill-name">EDA</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="85%"></div>
+      </div>
+    </div>
+
+    <!-- Data Science -->
+    <div class="skill-card">
+      <div class="icon-bg ds"><i class="fas fa-database"></i></div>
+      <div class="skill-name">Data Science</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="75%"></div>
+      </div>
+    </div>
+
+    <!-- Git -->
+    <div class="skill-card">
+      <div class="icon-bg git"><i class="fab fa-git-alt"></i></div>
+      <div class="skill-name">Git</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="85%"></div>
+      </div>
+    </div>
+
+    <!-- Deep Learning -->
+    <div class="skill-card">
+      <div class="icon-bg dl"><i class="fas fa-network-wired"></i></div>
+      <div class="skill-name">Deep Learning</div>
+      <div class="skill-bar-container">
+        <div class="skill-bar" data-value="70%"></div>
+      </div>
+    </div>
+
+  </div>
 </section>
 
 <!-- Projects -->
@@ -372,6 +452,34 @@ window.addEventListener('scroll', () => {
   else backBtn.style.display = 'none';
 });
 </script>
+<!-- Other HTML content -->
+
+<!-- Scripts -->
+<script>
+const skillCards = document.querySelectorAll('.skill-card');
+
+const animateSkills = () => {
+  skillCards.forEach(card => {
+    const top = card.getBoundingClientRect().top;
+    if(top < window.innerHeight - 50){
+      card.classList.add('visible');
+      const bar = card.querySelector('.skill-bar');
+      if(bar){
+        const val = bar.dataset.value;
+        bar.style.width = val;
+      }
+    }
+  });
+};
+
+// Animate on scroll
+window.addEventListener('scroll', animateSkills);
+
+// Animate on page load
+animateSkills();
+</script>
+</body>
+</html>
   
 </body>
 </html>
