--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
   <a href="#projects">Projects</a>
   <a href="#certificates">Certificates</a>
   <a href="#hobbies">Hobbies</a>
-  <a href="#books">Me Core</a>
+  <a href="#books">Learning</a>
   <a href="#contact">Contact</a>
 </nav>
 
@@ -132,7 +132,7 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
     <h1>Hammid Bin Aejaz</h1>
     <p class="intro">Hi! I’m Hammid, an AI & ML <span style="color:var(--accent)">enthusiast</span>. I enjoy turning data into insights and building smart systems.</p>
     <div class="social-links">
-      <a href="mailto:hamidbinaejaz@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a href="mailto:hammidbinaejaz@gmail.com"><i class="fas fa-envelope"></i></a>
       <a href="https://github.com/hammidbinaejaz" target="_blank"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
@@ -140,101 +140,21 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
   </div>
 </section>
 
+<!-- Skills -->
 <section id="skills">
-  <h2>My Skills</h2>
-  <div class="grid">
-    
-    <!-- Python -->
-    <div class="skill-card">
-      <div class="icon-bg python"><i class="fab fa-python"></i></div>
-      <div class="skill-name">Python</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="90%"></div>
-      </div>
-    </div>
-
-    <!-- Java -->
-    <div class="skill-card">
-      <div class="icon-bg java"><i class="fab fa-java"></i></div>
-      <div class="skill-name">Java</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="80%"></div>
-      </div>
-    </div>
-
-    <!-- C -->
-    <div class="skill-card">
-      <div class="icon-bg c"><i class="fas fa-code"></i></div>
-      <div class="skill-name">C</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="85%"></div>
-      </div>
-    </div>
-
-    <!-- Machine Learning -->
-    <div class="skill-card">
-      <div class="icon-bg ml"><i class="fas fa-robot"></i></div>
-      <div class="skill-name">Machine Learning</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="75%"></div>
-      </div>
-    </div>
-
-    <!-- Data Analysis -->
-    <div class="skill-card">
-      <div class="icon-bg da"><i class="fas fa-chart-line"></i></div>
-      <div class="skill-name">Data Analysis</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="80%"></div>
-      </div>
-    </div>
-
-    <!-- Artificial Intelligence -->
-    <div class="skill-card">
-      <div class="icon-bg ai"><i class="fas fa-brain"></i></div>
-      <div class="skill-name">Artificial Intelligence</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="70%"></div>
-      </div>
-    </div>
-
-    <!-- Exploratory Data Analysis -->
-    <div class="skill-card">
-      <div class="icon-bg eda"><i class="fas fa-search"></i></div>
-      <div class="skill-name">EDA</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="85%"></div>
-      </div>
-    </div>
-
-    <!-- Data Science -->
-    <div class="skill-card">
-      <div class="icon-bg ds"><i class="fas fa-database"></i></div>
-      <div class="skill-name">Data Science</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="75%"></div>
-      </div>
-    </div>
-
-    <!-- Git -->
-    <div class="skill-card">
-      <div class="icon-bg git"><i class="fab fa-git-alt"></i></div>
-      <div class="skill-name">Git</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="85%"></div>
-      </div>
-    </div>
-
-    <!-- Deep Learning -->
-    <div class="skill-card">
-      <div class="icon-bg dl"><i class="fas fa-network-wired"></i></div>
-      <div class="skill-name">Deep Learning</div>
-      <div class="skill-bar-container">
-        <div class="skill-bar" data-value="70%"></div>
-      </div>
-    </div>
-
-  </div>
+<h2>Skills</h2>
+<div class="grid">
+  <div class="card skill-card"><div class="icon-bg python"><i class="fab fa-python"></i></div><h4>Python</h4><p>ML frameworks & data analysis</p></div>
+  <div class="card skill-card"><div class="icon-bg java"><i class="fab fa-java"></i></div><h4>Java</h4><p>OOP & enterprise programming</p></div>
+  <div class="card skill-card"><div class="icon-bg c"><i class="fas fa-c"></i></div><h4>C</h4><p>Algorithms & DSA foundations</p></div>
+  <div class="card skill-card"><div class="icon-bg ml"><i class="fas fa-robot"></i></div><h4>Machine Learning</h4><p>Predictions & classification</p></div>
+  <div class="card skill-card"><div class="icon-bg da"><i class="fas fa-chart-line"></i></div><h4>Data Analytics</h4><p>Extract insights from data</p></div>
+  <div class="card skill-card"><div class="icon-bg ai"><i class="fas fa-brain"></i></div><h4>AI</h4><p>Neural networks & AI concepts</p></div>
+  <div class="card skill-card"><div class="icon-bg eda"><i class="fas fa-database"></i></div><h4>EDA</h4><p>Data exploration & visualization</p></div>
+  <div class="card skill-card"><div class="icon-bg ds"><i class="fas fa-network-wired"></i></div><h4>DSA</h4><p>Strong algorithm knowledge</p></div>
+  <div class="card skill-card"><div class="icon-bg git"><i class="fab fa-git-alt"></i></div><h4>Git/GitHub</h4><p>Version control & collaboration</p></div>
+  <div class="card skill-card"><div class="icon-bg dl"><i class="fas fa-layer-group"></i></div><h4>Deep Learning</h4><p>Neural networks implementation</p></div>
+</div>
 </section>
 
 <!-- Projects -->
@@ -352,7 +272,7 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
   <h2>Contact Me</h2>
   <div class="grid" style="justify-content:center; gap:20px;">
     <div class="card" style="padding:20px;">
-      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:hamidbinaejaz@gmail.com">hamidbinaejaz@gmail.com</a></p>
+      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
       <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/hammidbinaejaz" target="_blank">github.com/hammidbinaejaz</a></p>
       <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">linkedin.com/in/hamid-bin-aejaz</a></p>
     </div>
@@ -367,119 +287,6 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 </footer>
 </div> <!-- container end -->
 
-<script>
-// ================= Dark Mode Toggle =================
-const themeToggle = document.getElementById('themeToggle');
-const currentTheme = localStorage.getItem('theme');
-
-if (currentTheme === 'dark') {
-  document.body.classList.add('dark');
-  themeToggle.innerHTML = '<i class="fas fa-sun"></i>';
-}
-
-themeToggle.addEventListener('click', () => {
-  document.body.classList.toggle('dark');
-  if (document.body.classList.contains('dark')) {
-    localStorage.setItem('theme', 'dark');
-    themeToggle.innerHTML = '<i class="fas fa-sun"></i>';
-  } else {
-    localStorage.setItem('theme', 'light');
-    themeToggle.innerHTML = '<i class="fas fa-moon"></i>';
-  }
-});
-
-// ================= Scroll Fade-In Animations =================
-const fadeElements = document.querySelectorAll('section, .book-card, .hobby-card, .card');
-const observer = new IntersectionObserver((entries) => {
-  entries.forEach(entry => { if (entry.isIntersecting) entry.target.classList.add('visible'); });
-}, { threshold: 0.1 });
-fadeElements.forEach(el => observer.observe(el));
-
-// ================= Smooth Scroll for Nav Links =================
-const navLinks = document.querySelectorAll('nav a');
-navLinks.forEach(link => {
-  link.addEventListener('click', (e) => {
-    e.preventDefault();
-    const targetID = link.getAttribute('href').slice(1);
-    const targetSection = document.getElementById(targetID);
-    if (targetSection) {
-      const navHeight = document.querySelector('nav').offsetHeight;
-      window.scrollTo({
-        top: targetSection.offsetTop - navHeight - 10,
-        behavior: 'smooth'
-      });
-    }
-  });
-});
-
-// ================= Active Nav Highlight =================
-const sections = document.querySelectorAll('section');
-window.addEventListener('scroll', () => {
-  let current = '';
-  sections.forEach(section => {
-    const sectionTop = section.offsetTop - document.querySelector('nav').offsetHeight - 10;
-    if (scrollY >= sectionTop) current = section.getAttribute('id');
-  });
-  navLinks.forEach(link => {
-    link.classList.remove('active');
-    if (link.getAttribute('href') === `#${current}`) link.classList.add('active');
-  });
-});
-
-// ================= Typing Effect in Hero =================
-const introText = "Hi! I’m Hammid, an AI & ML enthusiast.";
-const introElement = document.querySelector('.hero p.intro');
-let charIndex = 0;
-function typeEffect() {
-  if (charIndex < introText.length) {
-    introElement.textContent += introText.charAt(charIndex);
-    charIndex++;
-    setTimeout(typeEffect, 50);
-  }
-}
-introElement.textContent = '';
-typeEffect();
-
-// ================= Back-to-Top Button =================
-const backBtn = document.createElement('div');
-backBtn.id = 'backTop';
-backBtn.innerHTML = '<i class="fas fa-arrow-up"></i>';
-document.body.appendChild(backBtn);
-
-backBtn.addEventListener('click', () => { window.scrollTo({ top: 0, behavior: 'smooth' }); });
-window.addEventListener('scroll', () => {
-  if (window.scrollY > 300) backBtn.style.display = 'flex';
-  else backBtn.style.display = 'none';
-});
-</script>
-<!-- Other HTML content -->
-
-<!-- Scripts -->
-<script>
-const skillCards = document.querySelectorAll('.skill-card');
-
-const animateSkills = () => {
-  skillCards.forEach(card => {
-    const top = card.getBoundingClientRect().top;
-    if(top < window.innerHeight - 50){
-      card.classList.add('visible');
-      const bar = card.querySelector('.skill-bar');
-      if(bar){
-        const val = bar.dataset.value;
-        bar.style.width = val;
-      }
-    }
-  });
-};
-
-// Animate on scroll
-window.addEventListener('scroll', animateSkills);
-
-// Animate on page load
-animateSkills();
-</script>
-</body>
-</html>
-  
+<script src="script.js"></script>
 </body>
 </html>
